internet assignment and delete zip files

--- a/WebFundamentals/HTML/python.html
+++ b/WebFundamentals/HTML/python.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Python</title>
-    <link rel="stylesheet" type="text/css" href="../CSS/python.css">
+    <link rel="stylesheet" type="text/css" href="python.css">
   </head>
   <body>
 
@@ -62,8 +62,8 @@
 
         </div>
         <div id="bottom_content">
-          <div id=bottom_col>
-            <hr width= 75% size="5" color=#3498DB>
+          <div class=bottom_col>
+            <hr class="line">
             <h2>Getting Started</h2>
             <p>
               Python can be easy to pick up whether
@@ -76,11 +76,11 @@
               <li><a href="">Beginner's Guide, Programmers</a></li>
               <li><a href="">Beginner's Guide, Non-Programmers</a></li>
               <li><a href="">Code sample and snippets for beginners</a></li>
-            <ul>
+            </ul>
 
           </div>
-          <div id=bottom_col>
-            <hr width= 75% size="5" color=#3498DB>
+          <div class=bottom_col>
+            <hr class="line">
             <h2>Applications</h2>
             <p>
               The <a href="">Python Package Index (PyPI)</a> hosts thousands of
@@ -94,7 +94,7 @@
               <li><a href="">Desktop GUIs</a></li>
               <li><a href="">Network Programming</a></li>
               <li><a href="">Softward and Game Development</a></li>
-            <ul>
+            </ul>
           </div>
         </div>
         <div id="footer">
